--- a/templates/layout/default.html
+++ b/templates/layout/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    {% include 'layout/head.html' %}
+{% include 'layout/head.html' %}
     <body>
-        
+        <div class="grid height_full">{% block content %}{% endblock %}</div>
     </body>
 </html>
