--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
 {% extends 'layout/default.html' %}
 
-{% block content %}
-{% endblock %}
+{% block content %}{% if args['html'] %}{{ args['html']|safe }}{% endif %}{% endblock %}
